<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.flang</groupId>
  <artifactId>fuzion</artifactId>
  <version>0.0</version>


  <properties>
    <src.dir>src</src.dir>
    <project.build.directory>src</project.build.directory>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>


  <build>
    <sourceDirectory>${src.dir}</sourceDirectory>
    <outputDirectory>${project.build.directory}/classes</outputDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>3.2.0</version>
          <executions>
            <execution>
              <id>add-source</id>
              <phase>generate-sources</phase>
              <goals>
                <goal>add-source</goal>
              </goals>
              <configuration>
                <sources>
                  <source>build/generated/src</source>
                </sources>
              </configuration>
            </execution>
          </executions>
        </plugin>
    </plugins>
  </build>



  <dependencies>
    <dependency>
      <groupId>org.jfree</groupId>
      <artifactId>org.jfree.svg</artifactId>
      <version>5.0.4</version>
    </dependency>
  </dependencies>
</project>

